sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value j
    j=i-1
    ^AlgBubbleSort1:7: error: not found: value j
    while (j>-1 && getValeur(j)<getValeur(i)){
           ^AlgBubbleSort1:7: error: not found: value j
    while (j>-1 && getValeur(j)<getValeur(i)){
                             ^AlgBubbleSort1:9: error: not found: value j
      echange(j+1, j)
              ^AlgBubbleSort1:9: error: not found: value j
      echange(j+1, j)
                   ^AlgBubbleSort1:11: error: not found: value j
      j=j-1
      ^