sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  for (i<- 0 to getNombreValeurs()){
    j=i-1
    var a = getValeur(i)
    while (j>-1 && getValeur(j)<getValeur(i)){

      echange(j+1, j)

      j=j-1
      a=getValeur(i+1)
    }
  }
}

